--- a/image_to_video_pipeline/requirements.txt
+++ b/image_to_video_pipeline/requirements.txt
@@ -1,456 +1,225 @@
-absl-py==2.1.0
-accelerate==0.34.2
-addict==2.4.0
-aioboto3==13.1.1
-aiobotocore==2.13.1
-aiofiles==23.2.1
-aiohappyeyeballs==2.3.7
-aiohttp==3.10.3
-aioitertools==0.11.0
-aiosignal==1.3.1
-albumentations==0.4.3
-aliyun-python-sdk-core==2.15.1
-aliyun-python-sdk-kms==2.16.4
-altair==5.4.0
-annotated-types==0.7.0
-antlr4-python3-runtime==4.8
-anyio==4.4.0
-appdirs==1.4.4
-asttokens==2.4.1
-async-timeout==4.0.3
-attr==0.3.2
-attrdict==2.0.1
-attrs==24.2.0
-Automat==20.2.0
-av==13.0.0
-Babel==2.8.0
-backoff==2.2.1
-bcrypt==3.2.0
-beartype==0.18.5
-beautifulsoup4==4.12.3
-bidict==0.23.1
-binpacking==1.5.2
-bitsandbytes==0.41.0
-blessed==1.20.0
-blinker==1.8.2
-boto3==1.34.131
-botocore==1.34.131
-bpython==0.24
-braceexpand==0.1.7
-Brotli==1.1.0
-bypy==1.8.5
-cachetools==5.4.0
--e git+https://github.com/cambrian-mllm/cambrian@8957657474a3adfc0c584bb0b7216ec76e1158a5#egg=cambrian
-carvekit-colab==4.1.0
-certifi==2024.7.4
-cffi==1.17.0
-cfgv==3.4.0
-chardet==4.0.0
-charset-normalizer==3.3.2
-click==8.1.7
--e git+https://github.com/openai/CLIP.git@dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1#egg=clip
-cloud-init==24.1.3
-colorama==0.4.4
-coloredlogs==15.0.1
-colossalai==0.4.3
-comm==0.2.2
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-contexttimer==0.3.3
-contourpy==1.2.1
-cpm-kernels==1.0.11
-crcmod==1.7
-cryptography==3.4.8
-curtsies==0.4.2
-cwcwidth==0.1.9
-cycler==0.12.1
-Cython==3.0.11
-dacite==1.8.1
-dataclasses-json==0.6.7
-datasets==3.0.0
-dbus-python==1.2.18
-debugpy==1.8.5
-decorator==5.1.1
-decord==0.6.0
-deeplake==3.9.18
-deepspeed==0.13.5
-Deprecated==1.2.14
-diffusers==0.27.2
-dill==0.3.5.1
-diskcache==5.6.3
-distlib==0.3.8
-distro==1.9.0
-distro-info==1.1+ubuntu0.2
-docker-pycreds==0.4.0
-docstring_parser==0.16
-dtw==1.4.0
-editdistance==0.6.2
-einops==0.8.0
-einops-exts==0.0.4
-et-xmlfile==1.1.0
-exceptiongroup==1.2.2
-executing==2.0.1
-EzColorLog==1.0.3
-fabric==3.2.2
-fairscale==0.4.0
-fastapi==0.100.1
-fastcore==1.7.1
-ffmpeg-python==0.2.0
-ffmpy==0.4.0
-filelock==3.16.0
-fire==0.4.0
-flash-attention==1.0.0
-Flask==3.0.3
-Flask-SocketIO==5.3.6
-fonttools==4.53.1
-frozenlist==1.4.1
-fsspec==2024.9.0
-ftfy==6.2.3
-future==1.0.0
-fvcore==0.1.5.post20221221
-galore-torch==1.0
-gcsfs==2024.9.0.post1
-gdown==5.2.0
-gitdb==4.0.11
-GitPython==3.1.43
-google==3.0.0
-google-api-core==2.19.2
-google-auth==2.33.0
-google-auth-oauthlib==1.0.0
-google-cloud-core==2.4.1
-google-cloud-storage==2.18.2
-google-crc32c==1.6.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.65.0
-gpustat==1.1.1
-gradio==4.16.0
-gradio_client==0.8.1
-GraKeL==0.1.10
-graphviz==0.20.3
-greenlet==3.0.3
-grpcio==1.65.5
-h11==0.14.0
-h5py==3.10.0
-hf_transfer==0.1.8
-hjson==3.1.0
-httpcore==0.17.3
-httplib2==0.20.2
-httpx==0.24.0
-huggingface-hub==0.24.5
-humanfriendly==10.0
-humbug==0.3.2
-hyperlink==21.0.0
-identify==2.6.1
-idna==3.6
-imageio==2.9.0
-imageio-ffmpeg==0.4.2
-imgaug==0.2.6
-importlib_metadata==8.5.0
-importlib_resources==6.4.3
-incremental==21.3.0
-# Editable install with no version control (internvl_chat==2.0.0)
--e /remote_shome/snl/feilong/xiapeng/haibo/videoRM/InternVL-main/internvl_chat
-invoke==2.2.0
-iopath==0.1.10
-ipykernel==6.29.5
-ipython==8.26.0
-ipywidgets==8.1.5
-itsdangerous==2.2.0
-jedi==0.19.1
-jeepney==0.7.1
-jieba==0.42.1
-Jinja2==3.1.4
-jiter==0.5.0
-jmespath==0.10.0
-joblib==1.4.2
-jsonlines==4.0.0
-jsonpatch==1.33
-jsonpointer==2.0
-jsonschema==3.2.0
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyterlab_widgets==3.0.13
-keyring==23.5.0
-kiwisolver==1.4.5
-kornia==0.6.0
-langchain==0.2.14
-langchain-community==0.2.12
-langchain-core==0.2.35
-langchain-text-splitters==0.2.2
-langdetect==1.0.9
-langsmith==0.1.104
-latex2mathml==3.77.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lazy_loader==0.4
-libdeeplake==0.0.138
-lightning-utilities==0.11.6
-linkify-it-py==2.0.3
--e git+https://github.com/haotian-liu/LLaVA.git@c121f0432da27facab705978f83c4ada465e46fd#egg=llava
--e git+https://github.com/microsoft/LLaVA-Med.git@ce6cc507bb540fab453dec2def539856423e0f38#egg=llava_med
-lmdeploy==0.5.3
-loguru==0.7.2
-lovely-numpy==0.2.13
-lovely-tensors==0.1.16
-lxml==5.3.0
-lz4==4.3.3
-mamba-ssm==2.2.2
-Markdown==3.7
-markdown-it-py==2.2.0
-markdown2==2.4.10
-MarkupSafe==2.1.5
-marshmallow==3.22.0
-matplotlib==3.7.4
-matplotlib-inline==0.1.7
-mdit-py-plugins==0.3.3
-mdurl==0.1.2
-mmengine==0.10.4
-mmengine-lite==0.10.4
-model-index==0.1.11
-modelscope==1.17.1
-modelscope_studio @ http://thunlp.oss-cn-qingdao.aliyuncs.com/multi_modal/never_delete/modelscope_studio-0.4.0.9-py3-none-any.whl#sha256=ff8745a9580789d9b9edae9a4101192bbd300aba91cb8779187f1a2e0d67028f
-more-itertools==10.1.0
-moviepy==1.0.3
-mpi4py_mpich==3.1.5
-mpmath==1.3.0
--e git+https://github.com/modelscope/swift.git@e46cda27abc5122402394b50e03b3d61ec04d0dc#egg=ms_swift
-msgpack==1.1.0
-multidict==6.0.5
-multiprocess==0.70.13
-mutagen==1.47.0
-mypy==1.8.0
-mypy-extensions==1.0.0
-narwhals==1.4.2
-nest-asyncio==1.6.0
-netifaces==0.11.0
-networkx==3.3
-ngrok==1.4.0
-ninja==1.11.1.1
-nltk==3.8.1
-nodeenv==1.9.1
-numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-ml-py==12.535.161
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.6.68
-nvidia-nvtx-cu12==12.1.105
-nvitop==1.3.2
-oauthlib==3.2.0
-omegaconf==2.1.1
-open_clip_torch==2.26.1
-openai==1.23.6
-opencv-python==4.5.5.64
-opencv-python-headless==4.5.5.64
-opendatalab==0.0.10
-openpyxl==3.1.2
-opensora @ file:///remote_shome/snl/feilong/xiapeng/haibo/auto_gen/Open-Sora
-openxlab==0.0.11
-ordered-set==4.1.0
-orjson==3.10.7
-oss2==2.17.0
-packaging==23.2
-pandarallel==1.6.5
-pandas==2.2.2
-parameterized==0.9.0
-paramiko==3.4.1
-parso==0.8.4
-pathos==0.3.2
-peft==0.4.0
-pexpect==4.8.0
-Pillow==10.1.0
-platformdirs==4.2.2
-plotly==5.13.1
-plumbum==1.8.3
-portalocker==2.10.1
-pox==0.3.4
-ppft==1.7.6.8
-pre-commit==3.8.0
-prettytable==3.11.0
-proglog==0.1.10
-prompt_toolkit==3.0.47
-proto-plus==1.24.0
-protobuf==4.25.0
-psutil==5.9.8
-ptyprocess==0.7.0
-pudb==2019.2
-pure_eval==0.2.3
-py-cpuinfo==9.0.0
-pyarrow==16.1.0
-pyarrow-hotfix==0.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pyav==13.0.0
-pycocoevalcap==1.2
-pycocotools==2.0.8
-pycparser==2.22
-pycryptodome==3.20.0
-pycryptodomex==3.20.0
-pydantic==2.1.0
-pydantic_core==2.4.0
-pydeck==0.9.1
-pyDeprecate==0.3.1
-pydub==0.25.1
-Pygments==2.18.0
-PyGObject==3.42.1
-PyHamcrest==2.0.2
-PyJWT==2.3.0
-PyNaCl==1.5.0
-pynvml==11.5.3
-pyOpenSSL==21.0.0
-pyparsing==3.1.4
-pyrsistent==0.18.1
-pyserial==3.5
-PySocks==1.7.1
-python-apt==2.4.0+ubuntu3
-python-dateutil==2.9.0.post0
-python-debian==0.1.43+ubuntu1.1
-python-dotenv==1.0.1
-python-engineio==4.9.1
-python-magic==0.4.24
-python-multipart==0.0.9
-python-socketio==5.11.3
-pytorch-lightning==1.4.2
-pytorchvideo==0.1.5
-pytz==2023.4
-PyWavelets==1.7.0
-pyxdg==0.28
-PyYAML==6.0.2
-pyzmq==26.2.0
-qudida==0.0.4
-qwen-vl-utils==0.0.4
-ray==2.35.0
-regex==2023.12.25
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-responses==0.18.0
-rich==13.4.2
-rotary-embedding-torch==0.5.3
-rouge==1.0.1
-rpyc==6.0.0
-rsa==4.9
-ruff==0.6.4
-s3transfer==0.10.2
-sacrebleu==2.3.2
-safetensors==0.4.4
-scenedetect==0.6.2
-scikit-image==0.20.0
-scikit-learn==1.2.2
-scikit-video==1.1.11
-scipy==1.10.1
-seaborn==0.13.0
-SecretStorage==3.3.1
-semantic-version==2.10.0
-sentence-transformers==3.0.1
-sentencepiece==0.1.99
-sentry-sdk==2.13.0
-service-identity==18.1.0
-setproctitle==1.3.3
-shellingham==1.5.4
-shortuuid==1.0.11
-shtab==1.7.1
-simple-websocket==1.0.0
-simple_parsing==0.1.5
-simplejson==3.19.3
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-socksio==1.0.0
-sortedcontainers==2.4.0
-sos==4.5.6
-soundfile==0.12.1
-soupsieve==2.6
-spaces==0.30.2
-SQLAlchemy==2.0.32
-ssh-import-id==5.11
-stack-data==0.6.3
-starlette==0.27.0
-streamlit==1.37.1
-svgwrite==1.4.3
-sympy==1.13.2
-systemd-python==234
-tabulate==0.9.0
--e git+https://github.com/CompVis/taming-transformers.git@3ba01b241669f5ade541ce990f7650a3b8f65318#egg=taming_transformers
-tenacity==8.5.0
-tensorboard==2.14.0
-tensorboard-data-server==0.7.2
-tensorboardX==2.6.2.2
-termcolor==2.4.0
-test_tube==0.7.5
-textgrad==0.1.5
-threadpoolctl==3.5.0
-tifffile==2024.8.10
-tiktoken==0.7.0
-timeout-decorator==0.5.0
-timm==0.9.16
-tokenizers==0.19.1
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.12.0
-torch==2.4.1
-torch-cluster==1.6.3
-torch-fidelity==0.3.0
-torch-scatter==2.1.2
-torch-sparse==0.6.18
-torch-spline-conv==1.2.2
-torch_geometric==2.5.3
-torchaudio==2.1.2
-torchdata==0.7.1
-torchdiffeq==0.2.3
-torchmetrics==0.6.0
-torchtext==0.17.0
-torchvision==0.19.1
-tornado==6.4.1
-tqdm==4.66.1
-traitlets==5.14.3
-transformers==4.44.2
-transformers-stream-generator==0.0.5
-triton==3.0.0
-trl==0.10.1
-Twisted==22.1.0
-typer==0.12.4
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tyro==0.8.10
-tzdata==2024.1
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-uc-micro-py==1.0.3
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==2.2.3
-urwid==2.6.15
-uvicorn==0.24.0.post1
-video2dataset==1.3.0
-virtualenv==20.26.4
-wadllib==1.3.6
-wandb==0.18.0
-watchdog==4.0.2
-wavedrom==2.0.3.post3
-wcwidth==0.2.13
-webdataset==0.2.5
-websockets==11.0.3
-webvtt-py==0.5.1
-Werkzeug==3.0.3
-widgetsnbextension==4.0.13
-wrapt==1.16.0
-wsproto==1.2.0
-xformers==0.0.25.post1
-xkit==0.0.0
-xxhash==3.5.0
-yacs==0.1.8
-yapf==0.40.1
-yarl==1.9.4
-yt-dlp==2024.8.6
-zipp==3.20.2
-zope.interface==5.4.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=conda_forge
+_openmp_mutex=4.5=2_gnu
+_sysroot_linux-64_curr_repodata_hack=3=haa98f57_10
+aiohappyeyeballs=2.4.0=py39h06a4308_0
+aiohttp=3.10.5=py39h5eee18b_0
+aiosignal=1.2.0=pyhd3eb1b0_0
+aom=3.6.0=h6a678d5_0
+arrow-cpp=16.1.0=hc1eb8f0_0
+async-timeout=4.0.3=py39h06a4308_0
+attrs=23.1.0=py39h06a4308_0
+aws-c-auth=0.6.19=h5eee18b_0
+aws-c-cal=0.5.20=hdbd6064_0
+aws-c-common=0.8.5=h5eee18b_0
+aws-c-compression=0.2.16=h5eee18b_0
+aws-c-event-stream=0.2.15=h6a678d5_0
+aws-c-http=0.6.25=h5eee18b_0
+aws-c-io=0.13.10=h5eee18b_0
+aws-c-mqtt=0.7.13=h5eee18b_0
+aws-c-s3=0.1.51=hdbd6064_0
+aws-c-sdkutils=0.1.6=h5eee18b_0
+aws-checksums=0.1.13=h5eee18b_0
+aws-crt-cpp=0.18.16=h6a678d5_0
+aws-sdk-cpp=1.10.55=h721c034_0
+binutils_impl_linux-64=2.38=h2a08ee3_1
+binutils_linux-64=2.38.0=hc2dff05_0
+blas=1.0=mkl
+boost-cpp=1.82.0=hdb19cb5_2
+boto3=1.34.154=py39h06a4308_0
+botocore=1.34.154=py39h06a4308_0
+bottleneck=1.3.7=py39ha9d4c09_0
+brotli-python=1.0.9=py39h6a678d5_8
+bzip2=1.0.8=h5eee18b_6
+c-ares=1.19.1=h5eee18b_0
+ca-certificates=2024.8.30=hbcca054_0
+cairo=1.16.0=hb05425b_5
+certifi=2024.8.30=py39h06a4308_0
+cffi=1.16.0=py39h5eee18b_1
+charset-normalizer=3.3.2=pyhd3eb1b0_0
+cryptography=43.0.0=py39hdda0065_0
+cudatoolkit=11.8.0=h6a678d5_0
+cudnn=8.9.2.26=cuda11_0
+cupti=11.8.0=he078b1a_0
+cyrus-sasl=2.1.28=h52b45da_1
+datasets=2.19.1=py39h06a4308_0
+dav1d=1.2.1=h5eee18b_0
+dbus=1.13.18=hb2f20db_0
+decorator=5.1.1=pyhd3eb1b0_0
+diffusers=0.30.2=pyhd8ed1ab_0
+diffusers-base=0.18.2=py39h2f386ee_0
+diffusers-torch=0.18.2=py39h2f386ee_0
+dill=0.3.6=py39h06a4308_0
+eigen=3.2.8=2
+expat=2.6.3=h6a678d5_0
+ffmpeg=4.2.3=h167e202_0
+filelock=3.13.1=py39h06a4308_0
+fontconfig=2.14.1=h4c34cd2_2
+freetype=2.12.1=h4a9f257_0
+frozenlist=1.4.0=py39h5eee18b_0
+fsspec=2024.3.1=py39h06a4308_0
+gcc_impl_linux-64=11.2.0=h1234567_1
+gcc_linux-64=11.2.0=h5c386dc_0
+gflags=2.2.2=h6a678d5_1
+giflib=5.2.1=h5eee18b_3
+glib=2.78.4=h6a678d5_0
+glib-tools=2.78.4=h6a678d5_0
+glog=0.5.0=h6a678d5_1
+gmp=6.2.1=h295c915_3
+gmpy2=2.1.2=py39heeb90bb_0
+gnutls=3.6.15=he1e5248_0
+graphite2=1.3.14=h295c915_1
+gst-plugins-base=1.14.1=h6a678d5_1
+gstreamer=1.14.1=h5eee18b_1
+gxx_impl_linux-64=11.2.0=h1234567_1
+gxx_linux-64=11.2.0=hc2dff05_0
+harfbuzz=4.3.0=hf52aaf7_2
+hdf5=1.12.1=h2b7332f_3
+huggingface_accelerate=0.33.0=py39h06a4308_0
+huggingface_hub=0.24.6=py39h06a4308_0
+icu=73.1=h6a678d5_0
+idna=3.7=py39h06a4308_0
+imageio=2.33.1=py39h06a4308_0
+imageio-ffmpeg=0.5.1=pyhd8ed1ab_0
+importlib-metadata=7.0.1=py39h06a4308_0
+intel-openmp=2023.1.0=hdb19cb5_46306
+jinja2=3.1.4=py39h06a4308_0
+jmespath=1.0.1=py39h06a4308_0
+jpeg=9e=h5eee18b_3
+kernel-headers_linux-64=3.10.0=h57e8cba_10
+krb5=1.20.1=h143b758_1
+lame=3.100=h7b6447c_0
+lcms2=2.12=h3be6417_0
+ld_impl_linux-64=2.38=h1181459_1
+leptonica=1.82.0=h42c8aad_2
+lerc=3.0=h295c915_0
+libabseil=20240116.2=cxx17_h6a678d5_0
+libarchive=3.6.2=h6ac8c49_3
+libboost=1.82.0=h109eef0_2
+libbrotlicommon=1.0.9=h5eee18b_8
+libbrotlidec=1.0.9=h5eee18b_8
+libbrotlienc=1.0.9=h5eee18b_8
+libclang=14.0.6=default_hc6dbbc7_1
+libclang13=14.0.6=default_he11475f_1
+libcups=2.4.2=h2d74bed_1
+libcurl=8.9.1=h251f7ec_0
+libdeflate=1.17=h5eee18b_1
+libedit=3.1.20230828=h5eee18b_0
+libev=4.33=h7f8727e_1
+libevent=2.1.12=hdbd6064_1
+libffi=3.4.4=h6a678d5_1
+libgcc=14.1.0=h77fa898_1
+libgcc-devel_linux-64=11.2.0=h1234567_1
+libgcc-ng=14.1.0=h69a702a_1
+libgfortran-ng=11.2.0=h00389a5_1
+libgfortran5=11.2.0=h1234567_1
+libglib=2.78.4=hdc74915_0
+libgomp=14.1.0=h77fa898_1
+libgrpc=1.62.2=h2d74bed_0
+libiconv=1.16=h5eee18b_3
+libidn2=2.3.4=h5eee18b_0
+libllvm14=14.0.6=hdb19cb5_3
+libnghttp2=1.57.0=h2d74bed_0
+libogg=1.3.5=h27cfd23_1
+libopus=1.3.1=h7b6447c_0
+libpng=1.6.39=h5eee18b_0
+libpq=12.17=hdbd6064_0
+libprotobuf=4.25.3=he621ea3_0
+libssh2=1.11.0=h251f7ec_0
+libstdcxx-devel_linux-64=11.2.0=h1234567_1
+libstdcxx-ng=11.2.0=h1234567_1
+libtasn1=4.19.0=h5eee18b_0
+libtheora=1.1.1=h7f8727e_3
+libthrift=0.15.0=h1795dd8_2
+libtiff=4.5.1=h6a678d5_0
+libunistring=0.9.10=h27cfd23_0
+libuuid=1.41.5=h5eee18b_0
+libvorbis=1.3.7=h7b6447c_0
+libvpx=1.13.1=h6a678d5_0
+libwebp=1.3.2=h11a3e52_0
+libwebp-base=1.3.2=h5eee18b_0
+libxcb=1.15=h7f8727e_0
+libxkbcommon=1.0.1=h5eee18b_1
+libxml2=2.10.4=hfdd30dd_2
+lz4-c=1.9.4=h6a678d5_1
+magma=2.7.1=h2c23e93_0
+markupsafe=2.1.3=py39h5eee18b_0
+mkl=2023.1.0=h213fc3f_46344
+mkl-service=2.4.0=py39h5eee18b_1
+mkl_fft=1.3.10=py39h5eee18b_0
+mkl_random=1.2.7=py39h1128e8f_0
+moviepy=1.0.3=pyhd8ed1ab_1
+mpc=1.0.3=0
+mpfr=4.0.2=hb69a4c5_1
+mpmath=1.3.0=py39h06a4308_0
+multidict=6.0.4=py39h5eee18b_0
+multiprocess=0.70.14=py39h06a4308_0
+mysql=5.7.24=h721c034_2
+ncurses=6.4=h6a678d5_0
+nettle=3.7.3=hbbd107a_1
+networkx=3.2.1=py39h06a4308_0
+numexpr=2.8.7=py39h85018f9_0
+numpy=1.26.4=py39h5f9d8c6_0
+numpy-base=1.26.4=py39hb5e798b_0
+opencv=4.10.0=py39h0a8ef67_0
+openh264=2.1.1=h4ff587b_0
+openjpeg=2.5.2=he7f1fd0_0
+openssl=3.3.2=hb9d3cd8_0
+orc=2.0.1=h2d29ad5_0
+packaging=24.1=py39h06a4308_0
+pandas=2.2.2=py39h6a678d5_0
+pcre2=10.42=hebb0a14_1
+pillow=10.4.0=py39h5eee18b_0
+pip=24.2=py39h06a4308_0
+pixman=0.40.0=h7f8727e_1
+proglog=0.1.9=py_0
+psutil=5.9.0=py39h5eee18b_0
+pyarrow=16.1.0=py39h1128e8f_0
+pycparser=2.21=pyhd3eb1b0_0
+pyopenssl=24.2.1=py39h06a4308_0
+pysocks=1.7.1=py39h06a4308_0
+python=3.9.19=h955ad1f_1
+python-dateutil=2.9.0post0=py39h06a4308_2
+python-tzdata=2023.3=pyhd3eb1b0_0
+python-xxhash=2.0.2=py39h5eee18b_1
+pytorch=2.3.0=gpu_cuda118py39hb74dfbf_101
+pytz=2024.1=py39h06a4308_0
+pyyaml=6.0.1=py39h5eee18b_0
+qt-main=5.15.2=h53bd1ea_10
+re2=2022.04.01=h295c915_0
+readline=8.2=h5eee18b_0
+regex=2024.7.24=py39h5eee18b_0
+requests=2.32.3=py39h06a4308_0
+responses=0.13.3=pyhd3eb1b0_0
+s2n=1.3.27=hdbd6064_0
+s3transfer=0.10.1=py39h06a4308_0
+safetensors=0.4.4=py39ha89cbab_0
+setuptools=72.1.0=py39h06a4308_0
+six=1.16.0=pyhd3eb1b0_1
+snappy=1.2.1=h6a678d5_0
+sqlite=3.45.3=h5eee18b_0
+sympy=1.13.2=py39h06a4308_0
+sysroot_linux-64=2.17=h57e8cba_10
+tbb=2021.8.0=hdb19cb5_0
+tesseract=5.2.0=h6a678d5_0
+tk=8.6.14=h39e8969_0
+tokenizers=0.19.1=py39hff361bb_0
+torchtriton=2.3.0=cuda123py39hdb19cb5_0
+tqdm=4.66.5=py39h2f386ee_0
+transformers=4.44.1=py39h06a4308_0
+typing-extensions=4.11.0=py39h06a4308_0
+typing_extensions=4.11.0=py39h06a4308_0
+tzdata=2024a=h04d1e81_0
+urllib3=1.26.19=py39h06a4308_0
+utf8proc=2.6.1=h5eee18b_1
+wheel=0.43.0=py39h06a4308_0
+x264=1!152.20180806=h7b6447c_0
+xxhash=0.8.0=h7f8727e_3
+xz=5.4.6=h5eee18b_1
+yaml=0.2.5=h7b6447c_0
+yarl=1.11.0=py39h5eee18b_0
+zipp=3.17.0=py39h06a4308_0
+zlib=1.2.13=h5eee18b_1
+zstd=1.5.5=hc292b87_2
