--- a/image_to_video_pipeline/requirements.txt
+++ b/image_to_video_pipeline/requirements.txt
@@ -1,225 +1,67 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=2_gnu
-_sysroot_linux-64_curr_repodata_hack=3=haa98f57_10
-aiohappyeyeballs=2.4.0=py39h06a4308_0
-aiohttp=3.10.5=py39h5eee18b_0
-aiosignal=1.2.0=pyhd3eb1b0_0
-aom=3.6.0=h6a678d5_0
-arrow-cpp=16.1.0=hc1eb8f0_0
-async-timeout=4.0.3=py39h06a4308_0
-attrs=23.1.0=py39h06a4308_0
-aws-c-auth=0.6.19=h5eee18b_0
-aws-c-cal=0.5.20=hdbd6064_0
-aws-c-common=0.8.5=h5eee18b_0
-aws-c-compression=0.2.16=h5eee18b_0
-aws-c-event-stream=0.2.15=h6a678d5_0
-aws-c-http=0.6.25=h5eee18b_0
-aws-c-io=0.13.10=h5eee18b_0
-aws-c-mqtt=0.7.13=h5eee18b_0
-aws-c-s3=0.1.51=hdbd6064_0
-aws-c-sdkutils=0.1.6=h5eee18b_0
-aws-checksums=0.1.13=h5eee18b_0
-aws-crt-cpp=0.18.16=h6a678d5_0
-aws-sdk-cpp=1.10.55=h721c034_0
-binutils_impl_linux-64=2.38=h2a08ee3_1
-binutils_linux-64=2.38.0=hc2dff05_0
-blas=1.0=mkl
-boost-cpp=1.82.0=hdb19cb5_2
-boto3=1.34.154=py39h06a4308_0
-botocore=1.34.154=py39h06a4308_0
-bottleneck=1.3.7=py39ha9d4c09_0
-brotli-python=1.0.9=py39h6a678d5_8
-bzip2=1.0.8=h5eee18b_6
-c-ares=1.19.1=h5eee18b_0
-ca-certificates=2024.8.30=hbcca054_0
-cairo=1.16.0=hb05425b_5
-certifi=2024.8.30=py39h06a4308_0
-cffi=1.16.0=py39h5eee18b_1
-charset-normalizer=3.3.2=pyhd3eb1b0_0
-cryptography=43.0.0=py39hdda0065_0
-cudatoolkit=11.8.0=h6a678d5_0
-cudnn=8.9.2.26=cuda11_0
-cupti=11.8.0=he078b1a_0
-cyrus-sasl=2.1.28=h52b45da_1
-datasets=2.19.1=py39h06a4308_0
-dav1d=1.2.1=h5eee18b_0
-dbus=1.13.18=hb2f20db_0
-decorator=5.1.1=pyhd3eb1b0_0
-diffusers=0.30.2=pyhd8ed1ab_0
-diffusers-base=0.18.2=py39h2f386ee_0
-diffusers-torch=0.18.2=py39h2f386ee_0
-dill=0.3.6=py39h06a4308_0
-eigen=3.2.8=2
-expat=2.6.3=h6a678d5_0
-ffmpeg=4.2.3=h167e202_0
-filelock=3.13.1=py39h06a4308_0
-fontconfig=2.14.1=h4c34cd2_2
-freetype=2.12.1=h4a9f257_0
-frozenlist=1.4.0=py39h5eee18b_0
-fsspec=2024.3.1=py39h06a4308_0
-gcc_impl_linux-64=11.2.0=h1234567_1
-gcc_linux-64=11.2.0=h5c386dc_0
-gflags=2.2.2=h6a678d5_1
-giflib=5.2.1=h5eee18b_3
-glib=2.78.4=h6a678d5_0
-glib-tools=2.78.4=h6a678d5_0
-glog=0.5.0=h6a678d5_1
-gmp=6.2.1=h295c915_3
-gmpy2=2.1.2=py39heeb90bb_0
-gnutls=3.6.15=he1e5248_0
-graphite2=1.3.14=h295c915_1
-gst-plugins-base=1.14.1=h6a678d5_1
-gstreamer=1.14.1=h5eee18b_1
-gxx_impl_linux-64=11.2.0=h1234567_1
-gxx_linux-64=11.2.0=hc2dff05_0
-harfbuzz=4.3.0=hf52aaf7_2
-hdf5=1.12.1=h2b7332f_3
-huggingface_accelerate=0.33.0=py39h06a4308_0
-huggingface_hub=0.24.6=py39h06a4308_0
-icu=73.1=h6a678d5_0
-idna=3.7=py39h06a4308_0
-imageio=2.33.1=py39h06a4308_0
-imageio-ffmpeg=0.5.1=pyhd8ed1ab_0
-importlib-metadata=7.0.1=py39h06a4308_0
-intel-openmp=2023.1.0=hdb19cb5_46306
-jinja2=3.1.4=py39h06a4308_0
-jmespath=1.0.1=py39h06a4308_0
-jpeg=9e=h5eee18b_3
-kernel-headers_linux-64=3.10.0=h57e8cba_10
-krb5=1.20.1=h143b758_1
-lame=3.100=h7b6447c_0
-lcms2=2.12=h3be6417_0
-ld_impl_linux-64=2.38=h1181459_1
-leptonica=1.82.0=h42c8aad_2
-lerc=3.0=h295c915_0
-libabseil=20240116.2=cxx17_h6a678d5_0
-libarchive=3.6.2=h6ac8c49_3
-libboost=1.82.0=h109eef0_2
-libbrotlicommon=1.0.9=h5eee18b_8
-libbrotlidec=1.0.9=h5eee18b_8
-libbrotlienc=1.0.9=h5eee18b_8
-libclang=14.0.6=default_hc6dbbc7_1
-libclang13=14.0.6=default_he11475f_1
-libcups=2.4.2=h2d74bed_1
-libcurl=8.9.1=h251f7ec_0
-libdeflate=1.17=h5eee18b_1
-libedit=3.1.20230828=h5eee18b_0
-libev=4.33=h7f8727e_1
-libevent=2.1.12=hdbd6064_1
-libffi=3.4.4=h6a678d5_1
-libgcc=14.1.0=h77fa898_1
-libgcc-devel_linux-64=11.2.0=h1234567_1
-libgcc-ng=14.1.0=h69a702a_1
-libgfortran-ng=11.2.0=h00389a5_1
-libgfortran5=11.2.0=h1234567_1
-libglib=2.78.4=hdc74915_0
-libgomp=14.1.0=h77fa898_1
-libgrpc=1.62.2=h2d74bed_0
-libiconv=1.16=h5eee18b_3
-libidn2=2.3.4=h5eee18b_0
-libllvm14=14.0.6=hdb19cb5_3
-libnghttp2=1.57.0=h2d74bed_0
-libogg=1.3.5=h27cfd23_1
-libopus=1.3.1=h7b6447c_0
-libpng=1.6.39=h5eee18b_0
-libpq=12.17=hdbd6064_0
-libprotobuf=4.25.3=he621ea3_0
-libssh2=1.11.0=h251f7ec_0
-libstdcxx-devel_linux-64=11.2.0=h1234567_1
-libstdcxx-ng=11.2.0=h1234567_1
-libtasn1=4.19.0=h5eee18b_0
-libtheora=1.1.1=h7f8727e_3
-libthrift=0.15.0=h1795dd8_2
-libtiff=4.5.1=h6a678d5_0
-libunistring=0.9.10=h27cfd23_0
-libuuid=1.41.5=h5eee18b_0
-libvorbis=1.3.7=h7b6447c_0
-libvpx=1.13.1=h6a678d5_0
-libwebp=1.3.2=h11a3e52_0
-libwebp-base=1.3.2=h5eee18b_0
-libxcb=1.15=h7f8727e_0
-libxkbcommon=1.0.1=h5eee18b_1
-libxml2=2.10.4=hfdd30dd_2
-lz4-c=1.9.4=h6a678d5_1
-magma=2.7.1=h2c23e93_0
-markupsafe=2.1.3=py39h5eee18b_0
-mkl=2023.1.0=h213fc3f_46344
-mkl-service=2.4.0=py39h5eee18b_1
-mkl_fft=1.3.10=py39h5eee18b_0
-mkl_random=1.2.7=py39h1128e8f_0
-moviepy=1.0.3=pyhd8ed1ab_1
-mpc=1.0.3=0
-mpfr=4.0.2=hb69a4c5_1
-mpmath=1.3.0=py39h06a4308_0
-multidict=6.0.4=py39h5eee18b_0
-multiprocess=0.70.14=py39h06a4308_0
-mysql=5.7.24=h721c034_2
-ncurses=6.4=h6a678d5_0
-nettle=3.7.3=hbbd107a_1
-networkx=3.2.1=py39h06a4308_0
-numexpr=2.8.7=py39h85018f9_0
-numpy=1.26.4=py39h5f9d8c6_0
-numpy-base=1.26.4=py39hb5e798b_0
-opencv=4.10.0=py39h0a8ef67_0
-openh264=2.1.1=h4ff587b_0
-openjpeg=2.5.2=he7f1fd0_0
-openssl=3.3.2=hb9d3cd8_0
-orc=2.0.1=h2d29ad5_0
-packaging=24.1=py39h06a4308_0
-pandas=2.2.2=py39h6a678d5_0
-pcre2=10.42=hebb0a14_1
-pillow=10.4.0=py39h5eee18b_0
-pip=24.2=py39h06a4308_0
-pixman=0.40.0=h7f8727e_1
-proglog=0.1.9=py_0
-psutil=5.9.0=py39h5eee18b_0
-pyarrow=16.1.0=py39h1128e8f_0
-pycparser=2.21=pyhd3eb1b0_0
-pyopenssl=24.2.1=py39h06a4308_0
-pysocks=1.7.1=py39h06a4308_0
-python=3.9.19=h955ad1f_1
-python-dateutil=2.9.0post0=py39h06a4308_2
-python-tzdata=2023.3=pyhd3eb1b0_0
-python-xxhash=2.0.2=py39h5eee18b_1
-pytorch=2.3.0=gpu_cuda118py39hb74dfbf_101
-pytz=2024.1=py39h06a4308_0
-pyyaml=6.0.1=py39h5eee18b_0
-qt-main=5.15.2=h53bd1ea_10
-re2=2022.04.01=h295c915_0
-readline=8.2=h5eee18b_0
-regex=2024.7.24=py39h5eee18b_0
-requests=2.32.3=py39h06a4308_0
-responses=0.13.3=pyhd3eb1b0_0
-s2n=1.3.27=hdbd6064_0
-s3transfer=0.10.1=py39h06a4308_0
-safetensors=0.4.4=py39ha89cbab_0
-setuptools=72.1.0=py39h06a4308_0
-six=1.16.0=pyhd3eb1b0_1
-snappy=1.2.1=h6a678d5_0
-sqlite=3.45.3=h5eee18b_0
-sympy=1.13.2=py39h06a4308_0
-sysroot_linux-64=2.17=h57e8cba_10
-tbb=2021.8.0=hdb19cb5_0
-tesseract=5.2.0=h6a678d5_0
-tk=8.6.14=h39e8969_0
-tokenizers=0.19.1=py39hff361bb_0
-torchtriton=2.3.0=cuda123py39hdb19cb5_0
-tqdm=4.66.5=py39h2f386ee_0
-transformers=4.44.1=py39h06a4308_0
-typing-extensions=4.11.0=py39h06a4308_0
-typing_extensions=4.11.0=py39h06a4308_0
-tzdata=2024a=h04d1e81_0
-urllib3=1.26.19=py39h06a4308_0
-utf8proc=2.6.1=h5eee18b_1
-wheel=0.43.0=py39h06a4308_0
-x264=1!152.20180806=h7b6447c_0
-xxhash=0.8.0=h7f8727e_3
-xz=5.4.6=h5eee18b_1
-yaml=0.2.5=h7b6447c_0
-yarl=1.11.0=py39h5eee18b_0
-zipp=3.17.0=py39h06a4308_0
-zlib=1.2.13=h5eee18b_1
-zstd=1.5.5=hc292b87_2
+accelerate==0.34.2
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==24.2.0
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+datasets==3.0.0
+diffusers==0.27.2
+dill==0.3.8
+filelock==3.16.1
+frozenlist==1.4.1
+fsspec==2024.6.1
+huggingface-hub==0.25.0
+idna==3.10
+importlib_metadata==8.5.0
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
+networkx==3.2.1
+numpy==1.26.4
+nvidia-cublas-cu12==12.4.2.65
+nvidia-cuda-cupti-cu12==12.4.99
+nvidia-cuda-nvrtc-cu12==12.4.99
+nvidia-cuda-runtime-cu12==12.4.99
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.0.44
+nvidia-curand-cu12==10.3.5.119
+nvidia-cusolver-cu12==11.6.0.99
+nvidia-cusparse-cu12==12.3.0.142
+nvidia-ml-py==12.535.161
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.4.99
+nvidia-nvtx-cu12==12.4.99
+nvitop==1.3.2
+opencv-python==4.5.5.64
+packaging==24.1
+pandas==2.2.2
+Pillow==10.1.0
+psutil==6.0.0
+pyarrow==17.0.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+regex==2024.9.11
+requests==2.32.3
+safetensors==0.4.5
+six==1.16.0
+sympy==1.12
+termcolor==2.4.0
+tokenizers==0.19.1
+torch==2.4.1+cu124
+torchaudio==2.4.1+cu124
+torchvision==0.19.1+cu124
+tqdm==4.66.5
+transformers==4.44.2
+triton==3.0.0
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.3
+xxhash==3.5.0
+yarl==1.11.1
+zipp==3.20.2
