--- a/MoE/MoE_config_2B_single_reward.json
+++ b/MoE/MoE_config_2B_single_reward.json
@@ -1,6 +1,6 @@
 {
     "model_type": "internvl2-2b",
-    "prompt_list": "../MoE/prompts.json",
+    "prompt_list": "../MoE/prompts_rm.json",
     "model_id_or_path": "../videoRM/Internvl/pretrain/InternVL2-2B",
     "dtype": "bfloat16",
     "router_path": "../videoRM/finetune_result/overall_expert_Internvl2_2B_base_model_lora_2/internvl2-2b/v6-20241027-185157/checkpoint-152",
